CS_PROD_20150209_01/Metadata/unpackaged/objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>Account_MSA_Signed_On__c</fullName>
        <formula>SBQQ__Account__r.MSA_Signed_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_MSA_Signed_On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>SBQQ__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>SBQQ__Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addl_Disc_Amount_For_Template__c</fullName>
        <formula>0 - SBQQ__AdditionalDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addl. Disc. Amount - For Template</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Customer_Total_Rollup__c</fullName>
        <label>Annual - Customer Total Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductFamily2__c</field>
            <operation>notEqual</operation>
            <value>Broadcast Services</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Customer_Total__c</fullName>
        <formula>IF(
Include_Monthly__c, 
Annual_Customer_Total_Rollup__c,
SBQQ__CustomerAmount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual - Customer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Customer_Total_with_Broadcast__c</fullName>
        <formula>Annual_Customer_Total__c + Broadcast_Customer_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual - Customer Total with Broadcast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Existing_Fee_Sum__c</fullName>
        <label>Annual - Existing Fee Sum</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>equals</operation>
            <value>MONCPUPGRADEPAID, RES-UPGRADE-CP</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_List_Total_Rollup__c</fullName>
        <label>Annual - List Total Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_List_Total__c</fullName>
        <formula>IF(Include_Monthly__c, 
Annual_List_Total_Rollup__c,
SBQQ__ListAmount__c)
+
ABS( Annual_Total_Negative_Discount__c ) - 
Monthly_Net_Copyright_Fees_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual - List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Net_Copyright_Fees_Rollup__c</fullName>
        <label>Annual - Net Copyright Fees Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>equals</operation>
            <value>MONCOPYRIGHTCAAC,MONCPCOPYRIGHT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Net_Copyright_Fees__c</fullName>
        <formula>IF(
 Include_Monthly__c, 
 0,
 Monthly_Net_Copyright_Fees_Rollup__c
)
+
Annual_Net_Copyright_Fees_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual - Net Copyright Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Total_Discount__c</fullName>
        <formula>(Annual_List_Total__c + Monthly_Net_Copyright_Fees_Rollup__c) - Annual_Customer_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual - Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Total_Negative_Discount__c</fullName>
        <label>Annual - Total Negative Discount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__TotalDiscountAmount__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__TotalDiscountAmount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Rejected_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Rejected Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <description>Created by LM on 4/23/2014 for Phase2</description>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Customer_Total__c</fullName>
        <label>Broadcast Customer Total</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductFamily2__c</field>
            <operation>equals</operation>
            <value>Broadcast Services</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Broadcast_List_Total__c</fullName>
        <label>Broadcast List Total</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductFamily2__c</field>
            <operation>equals</operation>
            <value>Broadcast Services</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Broadcast_Total_Discount__c</fullName>
        <formula>Broadcast_List_Total__c - Broadcast_Customer_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broadcast Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Rep__c</fullName>
        <formula>SBQQ__Opportunity__r.CA_Rep__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Date_Month__c</fullName>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Card Expiration Date Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Date_Year__c</fullName>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Card Expiration Date Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Name__c</fullName>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Card Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Verification_Number__c</fullName>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Card Verification Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Billing_City__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Billing_Country__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Billing_State__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Billing State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Billing_Street__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Billing_Zip__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Invoice_Contact_Email__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Invoice Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Change_Invoice_Contact_Name__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Invoice Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Invoice_Contact_Phone__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Invoice Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Close_Won_Date_Time__c</fullName>
        <formula>SBQQ__Opportunity__r.Closed_Won_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Won Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable_Potential__c</fullName>
        <formula>SBQQ__Opportunity__r.Commissionable_Potential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox gets set by Docusign when an Envelope has been created for this Quote.</description>
        <label>Contract Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copyright_Fee_Discount_Amount__c</fullName>
        <description>Sums up the discount amount for Copyright Fee products.</description>
        <inlineHelpText>Sums up the discount amount for Copyright Fee products.</inlineHelpText>
        <label>Copyright Fee Discount Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__TotalDiscountAmount__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>equals</operation>
            <value>MONCPCOPYRIGHT,MONCPCOPYRIGHTCAAC</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Credit_for_Existing_Services__c</fullName>
        <label>Count Credit for Existing Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>equals</operation>
            <value>MONCPUPGRADEPAID,RES-UPGRADE-CP</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Training__c</fullName>
        <label>Count Training</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>equals</operation>
            <value>RESTRAININGHALFDAY,RESTRAININGHOURLY</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Optional_Items__c</fullName>
        <label>Count of Optional Items</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Unit_Fees__c</fullName>
        <label>Count of Unit Fees</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Quantity__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Risk__c</fullName>
        <formula>TEXT( SBQQ__Account__r.Credit_Risk__c )</formula>
        <label>Credit Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Payment_Plan_Desc__c</fullName>
        <description>Added by LM on 3/6/2014 for Phase2</description>
        <label>Custom Payment Plan Desc.</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_for_Approval__c</fullName>
        <label>Discount Amount for Approval</label>
        <summarizedField>SBQQ__QuoteLine__c.Discount_Amount_for_Approval__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP1_10P_1K_5K__c</fullName>
        <description>IF Discount_Percent_for_Approval &lt; 10% AND Discount_Amount_for_Approval &gt; 1000 AND Discount_Amount_for_Approval &lt;=5000  THEN: Sales Manager approves during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &lt; 0.10
&amp;&amp; Discount_Amount_for_Approval__c &gt; 1000
&amp;&amp;  Discount_Amount_for_Approval__c &lt;= 5000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP1 10P 1K-5K</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP2_10P_5K_15K__c</fullName>
        <description>IF Discount_Percent_for_Approval &lt; 10% AND Discount_Amount_for_Approval &gt; 5000 AND Discount_Amount_for_Approval &lt;=15000  THEN: Sales Manager, Sales VP, and Caroline approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &lt; 0.10
&amp;&amp; Discount_Amount_for_Approval__c &gt; 5000
&amp;&amp; Discount_Amount_for_Approval__c &lt;= 15000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP2 10P 5K-15K</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP3_10P_15K_PLUS__c</fullName>
        <description>IF Discount_Percent_for_Approval &lt; 10% AND Discount_Amount_for_Approval &gt; 15000 THEN: Sales Manager, Sales VP, Caroline, and Dawn approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &lt; 0.10 
&amp;&amp; Discount_Amount_for_Approval__c &gt; 15000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP3 10P 15K PLUS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP4_10P_20P_5K__c</fullName>
        <description>IF Discount_Percent_for_Approval &gt;= 10% AND Discount_Percent_for_Approval &lt; 20%  AND Discount_Amount_for_Approval &lt;= 5000 THEN: Sales Manager approves during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &gt;= 0.10
&amp;&amp; Discount_Percent_for_Approval__c &lt; 0.20
&amp;&amp; Discount_Amount_for_Approval__c &lt;= 5000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP4 10P-20P 5K</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP5_10P_20P_5K_15K__c</fullName>
        <description>IF Discount_Percent_for_Approval &gt;= 10% AND Discount_Percent_for_Approval &lt; 20%  AND Discount_Amount_for_Approval &gt; 5000 AND Discount_Amount_for_Approval &lt;=15000  THEN: Sales Manager, Sales VP, and Caroline approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &gt;= 0.10
&amp;&amp; Discount_Percent_for_Approval__c &lt; 0.20
&amp;&amp; Discount_Amount_for_Approval__c &gt; 5000
&amp;&amp; Discount_Amount_for_Approval__c &lt;= 15000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP5 10P-20P 5K-15K</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP6_10P_20P_15K_PLUS__c</fullName>
        <description>IF Discount_Percent_for_Approval &gt;= 10% AND Discount_Percent_for_Approval &lt; 20% AND Discount_Amount_for_Approval &gt; 15000 THEN: Sales Manager, Sales VP, Caroline, and Dawn approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &gt;= 0.10 
&amp;&amp; Discount_Percent_for_Approval__c &lt; 0.20 
&amp;&amp; Discount_Amount_for_Approval__c &gt; 15000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP6 10P-20P 15K PLUS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP7_20P_30P_15K__c</fullName>
        <description>IF Discount_Percent_for_Approval &gt;= 20% AND Discount_Percent_for_Approval &lt; 30%  AND Discount_Amount_for_Approval &lt;= 15000 THEN: Sales Manager, Sales VP, and Caroline approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &gt;= 0.20
&amp;&amp; Discount_Percent_for_Approval__c &lt; 0.30
&amp;&amp; Discount_Amount_for_Approval__c &lt;= 15000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP7 20P-30P 15K</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP8_20P_30P_15K_PLUS__c</fullName>
        <description>IF Discount_Percent_for_Approval &gt;= 20% AND Discount_Percent_for_Approval &lt; 30%  AND Discount_Amount_for_Approval &gt; 15000 THEN: Sales Manager, Sales VP, Caroline, and Dawn approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &gt;= 0.20 
&amp;&amp; Discount_Percent_for_Approval__c &lt; 0.30 
&amp;&amp; Discount_Amount_for_Approval__c &gt; 15000, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP8 20P-30P 15K PLUS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_AP9_30P__c</fullName>
        <description>IF Discount_Percent_for_Approval &gt;= 30% THEN: Sales Manager, Sales VP, Caroline, and Dawn approve during APPROVALS</description>
        <formula>IF( 

Discount_Percent_for_Approval__c &gt;= 0.30, 

&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval AP9 30P</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_High__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;New&quot;
  &amp;&amp; (( Discount_Percent_for_Approval__c &lt; 0.09 &amp;&amp; 15000 &lt; Discount_Amount_for_Approval__c )
  || ( Discount_Percent_for_Approval__c &gt; 0.09 &amp;&amp; Discount_Percent_for_Approval__c &lt; 0.20 &amp;&amp; 15000 &lt; Discount_Amount_for_Approval__c )
  || ( Discount_Percent_for_Approval__c &gt;= 0.20 &amp;&amp; Discount_Percent_for_Approval__c &lt; 0.30 &amp;&amp; 15000 &lt; Discount_Amount_for_Approval__c)),
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval High</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Low_2nd_Tier__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;New&quot;
  &amp;&amp; ( Discount_Percent_for_Approval__c &gt; 0.09 
  &amp;&amp; Discount_Percent_for_Approval__c &lt; 0.20 
  &amp;&amp; Discount_Amount_for_Approval__c &lt;= 5000 ),
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval Low 2nd Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Low__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;New&quot;
  &amp;&amp; ( Discount_Percent_for_Approval__c &lt; 0.09 &amp;&amp; 1000 &lt; Discount_Amount_for_Approval__c &amp;&amp; Discount_Amount_for_Approval__c &lt;= 5000 ),
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval Low</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Mid__c</fullName>
        <formula>IF( TEXT( SBQQ__Opportunity__r.Type ) = &quot;New&quot;
  &amp;&amp; (( Discount_Percent_for_Approval__c &lt;= 0.09 &amp;&amp; 5000 &lt; Discount_Amount_for_Approval__c &amp;&amp; 15000 &gt;= Discount_Amount_for_Approval__c )
  || ( Discount_Percent_for_Approval__c &gt; 0.09 &amp;&amp; Discount_Percent_for_Approval__c &lt; 0.20 &amp;&amp; 5000 &lt; Discount_Amount_for_Approval__c &amp;&amp; 15000 &gt;= Discount_Amount_for_Approval__c )
  || ( Discount_Percent_for_Approval__c &gt;= 0.20 &amp;&amp; Discount_Percent_for_Approval__c &lt; 0.30 &amp;&amp; 15000 &gt;= Discount_Amount_for_Approval__c )),
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval Mid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_MONCPPRINTINTL__c</fullName>
        <label>Discount MONCPPRINTINTL</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>startsWith</operation>
            <value>MONCPPRINTINTL</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Percent_for_Approval__c</fullName>
        <formula>IF( SBQQ__ListAmount__c &lt;&gt; 0 ,
  Discount_Amount_for_Approval__c /  SBQQ__RegularAmount__c ,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percent for Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_RESCPDIST__c</fullName>
        <label>Discount RESCPDIST</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__TotalDiscountAmount__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__PackageProductCode__c</field>
            <operation>equals</operation>
            <value>RESCPDIST</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_Id__c</fullName>
        <externalId>true</externalId>
        <label>Docusign Envelope Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Status__c</fullName>
        <description>Stores to Docusign Status</description>
        <label>Docusign Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Not_Require_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Does Not Require PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_Create_Renewal_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 5/22/2014 for Phase2 (Renee)</description>
        <label>Don&apos;t Create Renewal Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>IF( Is_Renewal__c = TRUE, &quot;Renewal_Line_Editor&quot;, &quot;SBQQ__LineEditor&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditLinesFieldSetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Annual_Copyright_Fees__c</fullName>
        <formula>/* Per Amanda on 12/17, do not display copyright fee in sub-total, but in detailed lines */
False

/*
AND(
 Include_Annual__c,
 Annual_Net_Copyright_Fees__c &gt; 0
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Annual - Copyright Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Annual_Cust_Total_with_Broadcast__c</fullName>
        <formula>false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Annual Cust Total with Broadcast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Annual_Discount__c</fullName>
        <formula>AND(
 Include_Annual__c,
 Annual_Total_Discount__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Annual - Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Annual_Existing_Fees__c</fullName>
        <formula>Annual_Existing_Fee_Sum__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Annual - Existing Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Annual__c</fullName>
        <formula>Annual_List_Total__c &gt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Annual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Broadcast_Discount__c</fullName>
        <formula>Include_Annual__c &amp;&amp; ( Broadcast_Total_Discount__c &gt; 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Broadcast Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Broadcast_Totals__c</fullName>
        <formula>Include_Annual__c &amp;&amp; (Broadcast_Customer_Total__c &gt; 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Broadcast Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Cover_Letter__c</fullName>
        <formula>IF (
OR(
ISPICKVAL(SBQQ__Opportunity__r.Type,&quot;Renewal&quot;),
ISPICKVAL(SBQQ__Opportunity__r.Type,&quot;Renewal (Paid Extension)&quot;),
ISPICKVAL(SBQQ__Opportunity__r.Type,&quot;Upsell&quot;)
),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Cover Letter</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>